<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN_CONVAYOR" Id="{230d7160-cfd8-4561-bda5-963e513f3cc2}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN_CONVAYOR
VAR
	bTest:BOOL;
	inc: INT:=1;
	temp: INT;
	state: INT:=0;
	total_length: INT;
	cart_space: INT;
	cornerX: INT;
	cornerY: INT;
	bMOVE:BOOL :=FALSE;
	bSTARTUP: BOOL:=FALSE;
	rtrigNext: R_TRIG;
	counter: INT;
	counter1:INT;
	tNext: TON;
	tDelay: TON;
	bDELAY: BOOL:=FALSE;
	first_run: BOOL:=FALSE;
	bHomed: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR counter:=1 TO num_of_carts BY 1 DO
	fbCART[counter]();
END_FOR;

IF NOT first_run THEN
	A_set_cart_spaces();
	A_SETUP();
	first_run:=TRUE;
END_IF



tDelay(IN:=bDELAY);
tNext(IN:=bMOVE , PT:=T#1S , Q=> , ET=> );

CASE eMAIN_CONVAYOR_STATE OF
	E_CONVAYOR_STATE.homing:
		bHomed:=TRUE;
		
	E_CONVAYOR_STATE.uninit:
		eMAIN_CONVAYOR_STATE:=E_CONVAYOR_STATE.idle;
	
	E_CONVAYOR_STATE.idle:
		bDELAY:=FALSE;
	
	E_CONVAYOR_STATE.do_move: // start motion
		IF NOT Axis_MAIN.bBusy  AND NOT Axis_MAIN.bError THEN
			Axis_MAIN.rPos:=0;	
			Axis_MAIN.bSetPosition:=TRUE;	 
			A_CARTS_STEP();
			Axis_MAIN.bDo_Step_FW:=TRUE;
			eMAIN_CONVAYOR_STATE:=E_CONVAYOR_STATE.st1;
		END_IF
		
	E_CONVAYOR_STATE.st1:
		Axis_MAIN.bSetPosition:=FALSE;
		IF Axis_MAIN.rActPos = 0 THEN
			eMAIN_CONVAYOR_STATE:=E_CONVAYOR_STATE.st2;	
		END_IF
		
	E_CONVAYOR_STATE.st2:
		IF Axis_MAIN.rActPos > (Axis_MAIN.rStep/2)	THEN
			A_CARTS_STEP();	
			eMAIN_CONVAYOR_STATE:=E_CONVAYOR_STATE.st3;
		END_IF


	E_CONVAYOR_STATE.st3:
		IF Axis_MAIN.bInPos THEN
			eMAIN_CONVAYOR_STATE:=E_CONVAYOR_STATE.done;
		END_IF
		
	E_CONVAYOR_STATE.done:
		//...
	
	E_CONVAYOR_STATE.pause:
	//paused
	
END_CASE
	






	



]]></ST>
    </Implementation>
    <Action Name="A_CARTS_STEP" Id="{7a1e55b7-d701-499d-a448-d86c230d8eaf}">
      <Implementation>
        <ST><![CDATA[FOR counter1:=1 TO num_of_carts BY 1 DO
	fbCART[counter1].A_STEP();
END_FOR;

bTest:= NOT bTest;]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_set_cart_spaces" Id="{7d4d76aa-d053-4a28-a62b-1eb33cb8ead7}">
      <Implementation>
        <ST><![CDATA[ total_length := (conv_height*2)+(conv_length*2);
cart_space := total_length /((num_of_carts*2));
inc:=1;
posArrX[inc]:= 0+X_OFFSET;
posArrY[inc]:= 0+(conv_height/2)+Y_OFFSET;



WHILE state = 0 DO    //left1
	IF posArrY[inc]-cart_space < Y_OFFSET THEN
		temp :=cart_space - (posArrY[inc]-Y_OFFSET);
		posArrX[inc+1]:= temp+X_OFFSET;
		posArrY[inc+1]:= 0+Y_OFFSET;
		state:=1;
	ELSE
		posArrX[inc+1]:= 0+X_OFFSET;
		posArrY[inc+1]:=posArrY[inc]- cart_space;
		inc :=inc+1;
	END_IF
END_WHILE
inc := inc+1;

WHILE state = 1 DO // top
	IF posArrX[inc]+cart_space > (X_OFFSET+conv_length) THEN
		temp :=cart_space - ((X_OFFSET+conv_length)-posArrX[inc]);
		posArrX[inc+1]:= conv_length+X_OFFSET;
		posArrY[inc+1]:= temp+Y_OFFSET;
		state:=2;
	ELSE
		posArrX[inc+1]:= posArrX[inc]+cart_space;
		posArrY[inc+1]:=Y_OFFSET;
		inc :=inc+1;
	END_IF
END_WHILE
inc :=inc+1;	

WHILE state = 2 DO // right
	IF posArrY[inc]+cart_space > (Y_OFFSET+conv_height) THEN
		temp :=cart_space - ((Y_OFFSET+conv_height)-posArrY[inc]);
		posArrX[inc+1]:= (conv_length+X_OFFSET)-temp;
		posArrY[inc+1]:= 0+Y_OFFSET+conv_height;
		state:=3;
	ELSE
		posArrX[inc+1]:= 0+X_OFFSET+conv_length;
		posArrY[inc+1]:=posArrY[inc]+ cart_space;
		inc :=inc+1;
	END_IF	
END_WHILE
inc :=inc+1;	

WHILE state = 3 DO //bottom
	IF  posArrX[inc]-cart_space < X_OFFSET THEN
		temp :=cart_space - (posArrX[inc]-X_OFFSET);
		posArrX[inc+1]:= X_OFFSET;
		posArrY[inc+1]:= Y_OFFSET+ conv_height-temp;
		state:=4;
	ELSE
		posArrX[inc+1]:= posArrX[inc]-cart_space;
		posArrY[inc+1]:=Y_OFFSET+conv_height;
		inc :=inc+1;
		
	END_IF
END_WHILE

IF inc > 34 THEN
	RETURN;
END_IF


inc :=inc+1;

WHILE state = 4 DO    //left2
	IF posArrY[inc]-cart_space < ((conv_height/2)+Y_OFFSET) THEN
		state:=5;
	ELSE
		posArrX[inc+1]:= 0+X_OFFSET;
		posArrY[inc+1]:=posArrY[inc]- cart_space;
		inc :=inc+1;
		
	END_IF
END_WHILE


]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_SETUP" Id="{743a8297-84d8-4da3-9839-4637b3eb1bf1}">
      <Implementation>
        <ST><![CDATA[	bSTARTUP:=TRUE;
	fbCART[1].stCART.position:=1;
	fbCART[1].stCART.color:=1;
	fbCART[1].stCART.nNAME:=INT_TO_STRING(1001);
	fbCART[1].stCART.posX:=posArrX[1];
	fbCART[1].stCART.posY:=posArrY[1];
		
	FOR counter:=1 TO (num_of_carts-1) BY 1 DO
		fbCART[counter+1].stCART.position:=37-((counter*2));
		fbCART[counter+1].stCART.color:=1;
		fbCART[counter+1].stCART.nNAME:=INT_TO_STRING(1000+counter+1);
		fbCART[counter+1].stCART.posX:=posArrX[37-((counter*2))];
		fbCART[counter+1].stCART.posY:=posArrY[37-((counter*2))];
	END_FOR;
	]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>